[package]
name = "license-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "derive"] }
colored = "2.1.0"
http-cache-reqwest = "0.14.0"
nucleo-picker = "0.2.1"
platform-dirs = "0.3.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
reqwest-middleware = "0.3.3"
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
